# nxvalidate

./: .gitignore  COPYING  README.adoc  README.md  pyproject.toml
demos/: nxvalidate.py  validate_demo.py  xml-1.py  xml1.py
src/nxvalidate/: __init__.py  utils.py  validate.py
src/nxvalidate/definitions/applications/: NXdirecttof.nxdl.xml  NXxasproc.nxdl.xml
src/nxvalidate/definitions/base_classes/: NXbeam.nxdl.xml  NXdata.nxdl.xml  NXdetector.nxdl.xml  NXobject.nxdl.xml  NXroot.nxdl.xml  NXtransformations.nxdl.xml
src/nxvalidate/definitions/contributed_definitions/: NXgoniometer.nxdl.xml
src/nxvalidate/scripts/: nxinspect.py  nxvalidate.py  nxvalidate_script.py
