[build-system]
requires = ["setuptools >= 64", "setuptools_scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "nxvalidate"
version = "0.1.0"
description = "A Python package for validating NeXus files"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
  "nexusformat",
  "importlib_resources; python_version <= '3.9'"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/nexpy/nxvalidate.git"
Issues = "https://github.com/nexpy/nxvalidate/issues"

[project.scripts]
nxvalidate = "nxvalidate.scripts.nxvalidate:main"

[tool.setuptools.package-data]
"nxvalidate.definitions.base_classes" = ["*.nxdl.xml"]
"nxvalidate.examples" = ["*.nxs", "*.h5"]
